--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -13,8 +13,8 @@ $padding-sp: 20px;
 // フォント設定
 ////////////////////
 
-$base-font-family: "";
-$second-font-family: "";
+$base-font-family: 'Noto Sans JP', sans-serif;
+$second-font-family: 'Noto Serif JP', sans-serif;
 // ※検証ツールでしっかり反映されているか確認する
 
 body {
@@ -31,5 +31,8 @@ $bold: 700;
 ////////////////////
 
 //色指定（共通性のあるものは出来る限り指定すると良い）
-$black: #111;
 $white: #fff;
+$green: #408F95;
+$blue: #0D2936;
+$lightblue: #DDF0F1;
+$orange: #C94800;
