--- a/src/sass/module/_section-header.scss
+++ b/src/sass/module/_section-header.scss
@@ -6,6 +6,7 @@
     color: $blue;
     font-size: rem(32);
     line-height: 1;
+    text-align: center;
     @include mq("md") {
         font-size: rem(40);
     }
@@ -21,6 +22,7 @@
     color: $green;
     font-size: rem(12);
     line-height: 1;
+    text-align: center;
 }
 
 .section-header__maintitle--big {
