セクションタイトルの変更

--- a/src/sass/module/_section-header.scss
+++ b/src/sass/module/_section-header.scss
@@ -25,6 +25,6 @@
     text-align: center;
 }
 
-.section-header__maintitle--big {
+.section-header__maintitle.section-header__maintitle--big {
     font-size: rem(80);
 }
