--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -1,2 +1,41 @@
 @use "global" as *;
 
+.header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: rem(80);
+    z-index: 99999;
+    background-color: $blue;
+    width: 100%;
+    max-width: 100%;
+    @include mq("md") {
+        height: rem(90);
+    }
+}
+
+.header__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: inherit;
+    padding-left: rem(15);
+    padding-right: rem(15);
+    max-width: 100%;
+      @include mq("md") {
+         padding-left: rem(40);
+         padding-right: rem(40);
+      }
+}
+
+.header__logo {
+  position: relative;
+  color: $base;
+  width: rem(102);
+  z-index: 99999;
+    @include mq("md") {
+       width: rem(133);
+    }
+}
+
