--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 
-.campaign-card {
+.campaign-card__item {
     background-color: $base;
     box-shadow: rem(4) rem(4) #000000;
  }
