--- a/src/sass/module/_campaign.scss
+++ b/src/sass/module/_campaign.scss
@@ -1,13 +1,13 @@
 @use "global" as *;
 
-.campaign__items {
-    margin-top: rem(24);
-    margin-left: rem(15);
-    display: flex;
-    @include mq("md") {
-        margin-top: rem(40);
-    }
-}
+// .campaign__items {
+//     margin-top: rem(24);
+//     margin-left: rem(15);
+//     display: flex;
+//     @include mq("md") {
+//         margin-top: rem(40);
+//     }
+// }
 
 .campaign__btn {
     text-align: center;
