aboutusの変更まで

--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -6,7 +6,7 @@
     padding-bottom: rem(24);
     padding-left: rem(16);
     color: $blue;
-    box-shadow: 2px 2px #000000;
+    box-shadow: 0 rem(4) rem(4) rgba(0,0,0,0.25);
     position: relative;
 }
 
