--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
-.campaign-card__item {
+.campaign-card {
     background-color: $base;
-    box-shadow: rem(4) rem(4) #000000;
+    box-shadow: 0 rem(4) rem(4) rgba(0,0,0,0.25);
  }
 
 .campaign-card__img {
