--- a/src/sass/module/_hamburger.scss
+++ b/src/sass/module/_hamburger.scss
@@ -32,30 +32,32 @@ $drawer-color: $base;
      top: 0;
  }
 
-// .hamburger.is-open span:nth-child(1) {
-//     top:  rem(5);
-//     transform: rotate(45deg);
+  .hamburger.is-active span:nth-child(1) {
+      top:  rem(15);
+      transform: rotate(38deg);
+  }
+
+  .hamburger.is-active span:nth-child(2) {
+      opacity: 0;
+      transform: translateY(-50%);
+  }
+
+  .hamburger.is-active span:nth-child(3) {
+      top: rem(-12);
+      transform: rotate(-38deg);
+  }
+
+// .hamburger.is-active span:nth-of-type(1) {
+//   -webkit-transform: translateY(20px) rotate(45deg);
+//   transform: translateY(20px) rotate(45deg);
 // }
 
-// .hamburger.is-open span:nth-child(2) {
-//     transform: translateY(-50%);
+// .hamburger.is-active span:nth-of-type(2) {
+//   transform: translateY(-50%);
 //     opacity: 0;
 // }
-
-// .hamburger.is-open span:nth-child(3) {
-//     top: rem(-7);
-//     transform: rotate(-45deg);
+ 
+// .hamburger.is-active span:nth-of-type(3) {
+//   -webkit-transform: translateY(-20px) rotate(-45deg);
+//   transform: translateY(-20px) rotate(-45deg);
 // }
-
-.hamburger.is-active span:nth-of-type(1) {
-    -webkit-transform: translateY(22px) rotate(37deg);
-    transform: translateY(22px) rotate(37deg);
-  }
-.hamburger.is-active span:nth-of-type(2) {
-    opacity: 0;
-  }
-.hamburger.is-active span:nth-of-type(3) {
-    -webkit-transform: translateY(-5px) rotate(-37deg);
-    transform: translateY(-5px) rotate(-37deg);
-  }
-  
