--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -7,13 +7,13 @@
     right: 0;
     height: rem(80);
     z-index: 99999;
-    background-color: $blue;
+    background-color: rgba(13,41,51,0.68);
     width: 100%;
     max-width: 100%;
     @include mq("md") {
         height: rem(90);
     }
-}
+  }
 
 .header__inner {
     display: flex;
@@ -21,7 +21,7 @@
     justify-content: space-between;
     height: inherit;
     padding-left: rem(15);
-    padding-right: rem(15);
+    padding-right: rem(6);
     max-width: 100%;
       @include mq("md") {
          padding-left: rem(40);
@@ -31,7 +31,7 @@
 
 .header__logo {
   position: relative;
-  background-color: $black;
+  // background-color: $black;
   width: rem(102);
   z-index: 99999;
     @include mq("md") {
