--- a/src/sass/module/_aboutus.scss
+++ b/src/sass/module/_aboutus.scss
@@ -1,16 +1,16 @@
 @use "global" as *;
 
-.about__inner {
-    padding-left: rem(15);
-    padding-right: rem(15);
-    @include mq("md") {
-        padding-left: rem(25);
-        padding-right: rem(25);
-    }
-}
+// .about__inner {
+//     padding-left: rem(15);
+//     padding-right: rem(15);
+//     @include mq("md") {
+//         padding-left: rem(25);
+//         padding-right: rem(25);
+//     }
+// }
 
-.about__img {
-    margin-top: rem(24);
+.aboutus__img {
+    margin-top: rem(30);
     display: flex;
     margin: auto;
     @include mq("md") {
@@ -19,15 +19,17 @@
     }
 }
 
-.about__img-left {
+.aboutus__img-left {
     aspect-ratio: 128 / 194;
-    width: 37%;
+    width: 47%;
+    max-width: rem(128);
+    height: 100%;
     @include mq("md") {
         aspect-ratio: 606 / 400;
     }
 }
 
-.about__img-left img {
+.aboutus__img-left img {
     top: 0;
     left: 0;
     width: 100%;
@@ -35,7 +37,7 @@
     object-fit: cover;
  }
 
- .about__img-right {
+ .aboutus__img-right {
     margin-top: rem(26);
     aspect-ratio: 281 / 186;
     width: 81%;
@@ -46,7 +48,7 @@
     }
 }
 
-.about__img-right img {
+.aboutus__img-right img {
     top: 0;
     left: 0;
     width: 100%;
@@ -54,14 +56,14 @@
     object-fit: cover;
  }
 
- .about__text-body {
+ .aboutus__text-body {
     margin-top: rem(40);
     @include mq("md") {
         margin-top: rem(0);
     }
  }
 
- .about__title {
+ .aboutus__title {
     font-size: rem(40);
     color: $black;
     font-weight: $regular;
@@ -72,14 +74,14 @@
     }
  }
 
- .about__text {
+ .aboutus__text {
     margin-top: rem(16);
     @include mq("md") {
         margin-top: rem(0);
     }
  }
 
- .about__btn {
+ .aboutus__btn {
     text-align: center;
     margin-top: rem(50);
     @include mq("md") {
