--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -1,19 +1,25 @@
 @use "global" as *;
 
 .campaign-card {
-    background-color: $base;
-    box-shadow: 0 rem(4) rem(4) rgba(0,0,0,0.25);
- }
+   background-color: $base;
+   box-shadow: 0 rem(4) rem(4) rgba(0,0,0,0.25);
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
 
 .campaign-card__img {
     aspect-ratio: 280 / 188;
     width: 100%;
+    max-width: rem(280);
     @include mq("md") {
         aspect-ratio: 333 / 223;
+        max-width: rem(333);
     }
 }
 
 .campaign-card__img img {
+   display: block;
     top: 0;
     left: 0;
     width: 100%;
