--- a/src/sass/module/_aboutus.scss
+++ b/src/sass/module/_aboutus.scss
@@ -10,51 +10,55 @@
 // }
 
 .aboutus__img {
+    position: relative;
     margin-top: rem(30);
     display: flex;
-    margin: auto;
+    // margin: auto;
     @include mq("md") {
         margin-top: rem(40);
         max-width: rem(1080);
     }
 }
 
-.aboutus__img-left {
-    aspect-ratio: 128 / 194;
-    width: 47%;
-    max-width: rem(128);
-    height: 100%;
-    @include mq("md") {
-        aspect-ratio: 606 / 400;
-    }
+.about__img img {
+    position: absolute;
 }
 
-.aboutus__img-left img {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+ .aboutus__img-left {
+     aspect-ratio: 128 / 194;
+     width: 37%;
+     z-index: 2;
+     @include mq("md") {
+         aspect-ratio: 606 / 400;
+     }
  }
 
- .aboutus__img-right {
-    margin-top: rem(26);
-    aspect-ratio: 281 / 186;
-    width: 81%;
-    z-index: -1;
-    @include mq("md") {
-        margin-top: rem(80);
-        aspect-ratio: 880 / 581;
-    }
-}
+ .aboutus__img-left img {
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+  }
 
-.aboutus__img-right img {
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+  .aboutus__img-right {
+     margin-top: rem(26);
+     aspect-ratio: 281 / 186;
+    //  width: 81%;
+     z-index: -1;
+     @include mq("md") {
+         margin-top: rem(80);
+         aspect-ratio: 880 / 581;
+     }
  }
+
+ .aboutus__img-right img {
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
+     object-fit: cover;
+  }
 
  .aboutus__text-body {
     margin-top: rem(40);
