contactの変更まで

--- a/src/sass/module/_aboutus.scss
+++ b/src/sass/module/_aboutus.scss
@@ -20,9 +20,9 @@
     }
 }
 
-.about__img img {
-    position: absolute;
-}
+// .about__img img {
+//     position: absolute;
+// }
 
  .aboutus__img-left {
      aspect-ratio: 128 / 194;
