--- a/src/sass/global/_setting.scss
+++ b/src/sass/global/_setting.scss
@@ -13,8 +13,10 @@ $padding-sp: 20px;
 // フォント設定
 ////////////////////
 
-$base-font-family: "Gotu", "Noto Sans JP", sans-serif;
-$second-font-family: "Lato", "Noto Serif JP", sans-serif;
+$base-font-family: 'Gotu', sans-serif;
+$second-font-family: 'Lato', sans-serif;
+$third-font-family: 'Noto Sans JP', sans-serif;
+$forth-font-family: 'Noto Serif', serif;
 // ※検証ツールでしっかり反映されているか確認する
 
 body {
