--- a/src/sass/module/_campaign-card.scss
+++ b/src/sass/module/_campaign-card.scss
@@ -1,103 +1,103 @@
 @use "global" as *;
 
-.campaign-card {
-   background-color: $base;
-   box-shadow: 0 rem(4) rem(4) rgba(0,0,0,0.25);
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
+// .campaign-card {
+//    background-color: $base;
+//    box-shadow: 0 rem(4) rem(4) rgba(0,0,0,0.25);
+//    display: flex;
+//    justify-content: center;
+//    align-items: center;
+// }
 
-.campaign-card__img {
-    aspect-ratio: 280 / 188;
-    width: 100%;
-    max-width: rem(280);
-    @include mq("md") {
-        aspect-ratio: 333 / 223;
-        max-width: rem(333);
-    }
-}
+// .campaign-card__img {
+//     aspect-ratio: 280 / 188;
+//     width: 100%;
+//     max-width: rem(280);
+//     @include mq("md") {
+//         aspect-ratio: 333 / 223;
+//         max-width: rem(333);
+//     }
+// }
 
-.campaign-card__img img {
-   display: block;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
- }
+// .campaign-card__img img {
+//    display: block;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+//  }
 
- .campaign-card__body {
-    padding-top: rem(16);
-    padding-right: rem(16);
-    padding-left: rem(16);
-    padding-bottom: rem(24);
-    @include mq("md") {
-        padding-top: rem(24);
-        padding-bottom: rem(40);
-    }
+//  .campaign-card__body {
+//     padding-top: rem(16);
+//     padding-right: rem(16);
+//     padding-left: rem(16);
+//     padding-bottom: rem(24);
+//     @include mq("md") {
+//         padding-top: rem(24);
+//         padding-bottom: rem(40);
+//     }
 
- }
+//  }
 
- .campaign-card__info {
-    display: inline-block;
-    font-size: rem(12);
-    line-height: 1;
-    color: $black;
-    border: rem(1) solid $black;
-    padding: rem(4) rem(12);
-    @include mq("md") {
-        padding: rem(6) rem(16);
-    }
- }
+//  .campaign-card__info {
+//     display: inline-block;
+//     font-size: rem(12);
+//     line-height: 1;
+//     color: $black;
+//     border: rem(1) solid $black;
+//     padding: rem(4) rem(12);
+//     @include mq("md") {
+//         padding: rem(6) rem(16);
+//     }
+//  }
 
- .campaign-card__text {
-    color: $blue;
-    margin-bottom: rem(8);
- }
+//  .campaign-card__text {
+//     color: $blue;
+//     margin-bottom: rem(8);
+//  }
 
- .campaign-card__title {
-    font-size: rem(16);
-    line-height: calc(24 / 16);
-    font-weight: $medium;
-    margin-top: rem(4);
-    border-bottom: rem(1) solid $black;
- }
+//  .campaign-card__title {
+//     font-size: rem(16);
+//     line-height: calc(24 / 16);
+//     font-weight: $medium;
+//     margin-top: rem(4);
+//     border-bottom: rem(1) solid $black;
+//  }
 
- .campaign-card__name {
-    font-size: rem(14);
-    line-height: calc(24 / 14);
-    margin-top: rem(8);
-    text-align: center;
-    @include mq("md") {
-        font-size: rem(16);
-        line-height: calc(24 / 16);
-        margin-top: rem(16);
-    }
- }
+//  .campaign-card__name {
+//     font-size: rem(14);
+//     line-height: calc(24 / 14);
+//     margin-top: rem(8);
+//     text-align: center;
+//     @include mq("md") {
+//         font-size: rem(16);
+//         line-height: calc(24 / 16);
+//         margin-top: rem(16);
+//     }
+//  }
 
- .campaign-card__price {
-    display: flex;
-    font-weight: $bold;
- }
+//  .campaign-card__price {
+//     display: flex;
+//     font-weight: $bold;
+//  }
 
- .campaign-card__price1 {
-    color: $blue;
-    font-size: rem(20);
-    padding-top: rem(18);
-    text-decoration: rem(3) line-through $orange;
-    @include mq("md") {
-        font-size: rem(24);
-        padding-top: rem(22);
-    }
- }
+//  .campaign-card__price1 {
+//     color: $blue;
+//     font-size: rem(20);
+//     padding-top: rem(18);
+//     text-decoration: rem(3) line-through $orange;
+//     @include mq("md") {
+//         font-size: rem(24);
+//         padding-top: rem(22);
+//     }
+//  }
 
- .campaign-card__price2 {
-    color: $black;
-    margin-left: rem(24);
-    font-size: rem(32);
-    padding-top: rem(8);
-    @include mq("md") {
-        font-size: rem(40);
-    }
- }
+//  .campaign-card__price2 {
+//     color: $black;
+//     margin-left: rem(24);
+//     font-size: rem(32);
+//     padding-top: rem(8);
+//     @include mq("md") {
+//         font-size: rem(40);
+//     }
+//  }
