--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -1,8 +1,8 @@
 @use "global" as *;
 
-.contact {
-    // position: relative;
-}
+// .contact {
+//     // position: relative;
+// }
 
 .contact__inner {
     @include mq("md") {
@@ -12,11 +12,24 @@
     }
 }
 
+.contact__inner::after {
+    position: absolute;
+    content: '';
+    background-image: url(/src/assets/images/common/contact-fish.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: center;
+    width: rem(109);
+    height: rem(50);
+    @include mq("md") {
+        width: rem(301);
+        height: rem(138);
+    }
+}
+
 .contact__container {
    margin-left: auto;
    margin-right: auto;
-//    position: absolute;
-    background-image: url(/src/assets/images/common/contact-fish.png);
     @include mq("md") {
         display: flex;
         padding-top: rem(80);
@@ -26,6 +39,8 @@
 }
 
 .contact__access {
+    width: 78.6666%;
+    margin: auto;
     @include mq("md") {
         padding-right: rem(82);
         padding-left: rem(50);
@@ -34,6 +49,7 @@
 }
 
 .contact__info {
+    margin-top: rem(16);
     @include mq("md") {
         display: flex;
         margin-top: rem(24);
@@ -43,32 +59,37 @@
 .contact__address {
     font-size: rem(16);
     line-height: calc(24 / 16);
+    font-family: $third-font-family;
     font-weight: $regular;
     color: $blue;
     max-width: rem(146);
     width: 100%;
     margin: auto;
+    text-align: center;
     white-space: nowrap;
-    margin-top: rem(16);
+    margin-top: rem(20);
     @include mq("md") {
         margin-top: 0;
     }
 }
 
 .contact__map {
-    aspect-ratio: 295 / 160;
-    margin-top: rem(16);
+    margin-top: rem(22);
     box-shadow: rem(0) rem(4) rem(4) rgba(0,0,0,0.25);
     @include mq("md") {
-        aspect-ratio: 273 / 148;
         margin-top: 0;
         margin-left: rem(21);
     }
   }
 
   .contact__map iframe {
+    aspect-ratio: 295 / 160;
+    object-fit: cover;
     width: 100%;
     height: 100%;
+    @include mq("md") {
+        aspect-ratio: 273 / 148;
+    }
   }
 
   .contact__content {
