--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -5,30 +5,78 @@
 }
 
 .price__inner {
+    position: relative;
     padding-top: rem(80);
     padding-bottom: rem(80);
+    padding-left: rem(15);
+    padding-right: rem(15);
     @include mq("md") {
         padding-top: rem(100);
         padding-bottom: rem(100);
     }
 }
 
-.price__body {
+.price__inner::after {
     @include mq("md") {
+        position: absolute;
+        content: '';
+        background-image: url(/src/assets/images/common/price-fish.svg);
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        width: rem(437);
+        height: rem(201);
+    }
+}
+
+.price__body {
+    margin-top: rem(30);
+    @include mq("md") {
+        margin-top: rem(40);
         display: flex;
+        flex-direction: row-reverse;
+        gap: 8.611%;
     }
 }
 
 .price__img {
-    margin-top: rem(24);
+    position: relative;
+    @include mq("md") {
+        width: 45.555555%;
+    }
+}
+
+.price__img img {
+    aspect-ratio: 345 / 227;
+    object-fit: cover;
+    width: 100%;
+    display: block;
+    @include mq("md") {
+        aspect-ratio: 492 / 746;
+        height: 100%;
+    }
+}
+
+.price__list {
+    @include mq("md") {
+        width: 45.555555%;
+    }
+}
+
+.price__item {
+    margin-top: rem(42);
+    font-family: $third-font-family;
+    @include mq("md") {
+        margin-top: 0;
+    }
+}
+
+.price__item:not(:first-of-type) {
     @include mq("md") {
         margin-top: rem(40);
     }
 }
 
-.price__item {
-    margin-top: rem(40);
-}
 
 .price__btn {
     text-align: center;
