--- a/src/sass/module/_price.scss
+++ b/src/sass/module/_price.scss
@@ -26,6 +26,8 @@
         background-position: center;
         width: rem(437);
         height: rem(201);
+        top: 78%;
+        left: -4%;
     }
 }
 
