--- a/src/sass/module/_blog.scss
+++ b/src/sass/module/_blog.scss
@@ -4,6 +4,7 @@
     max-width: rem(600);
     margin-left: auto;
     margin-right: auto;
+    margin-top: rem(24);
     @include mq("md") {
         display: grid;
         justify-content: center;
